--- a/index.html
+++ b/index.html
@@ -19,4 +19,10 @@
 	</button>
 </div>
 
+<!-- Place this tag where you want the button to render. -->
+<a class="github-button" href="https://github.com/Daniel-Hug/speech-input" data-icon="octicon-star" data-style="mega" data-count-href="/Daniel-Hug/speech-input/stargazers" data-count-api="/repos/Daniel-Hug/speech-input#stargazers_count" data-count-aria-label="# stargazers on GitHub" aria-label="Star Daniel-Hug/speech-input on GitHub">Star</a>
+
 <script src="speech-input.js"></script>
+
+<!-- Place this tag in your head or just before your close body tag. -->
+<script async defer src="https://buttons.github.io/buttons.js"></script>
