markup other than input is automatically added

--- a/index.html
+++ b/index.html
@@ -4,20 +4,13 @@
 <title>Simple speech input for &lt;input&gt;s —replaces deprecated x-webkit-speech attribute</title>
 <link rel="stylesheet" href="speech-input.css">
 <style>
-.si-wrapper input {
+.speech-input {
 	font-size: 2em;
 	padding: .1em;
 }
 </style>
 
-<div class="si-wrapper">
-	<input type="text" class="si-input" placeholder="What's up?">
-	<button class="si-btn">
-		speech input
-		<span class="si-mic"></span>
-		<span class="si-holder"></span>
-	</button>
-</div>
+<input type="text" class="speech-input" placeholder="What's up?">
 
 <br><br><br>
 <a class="github-button" href="https://github.com/Daniel-Hug/speech-input" data-icon="octicon-star" data-style="mega" data-count-href="/Daniel-Hug/speech-input/stargazers" data-count-api="/repos/Daniel-Hug/speech-input#stargazers_count" data-count-aria-label="# stargazers on GitHub" aria-label="Star Daniel-Hug/speech-input on GitHub">Star</a>
