better support for other languages

--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@ h3 {
 <h3>Single-line input</h3>
 <input type="text" class="speech-input" placeholder="What's up?">
 
+<h3>Single-line input (Spanish)</h3>
+<input type="text" class="speech-input" placeholder="¿Qué tal?" data-ready="Habla ahora" lang="es">
+
 <h3>Multi-line text area</h3>
 <textarea class="speech-input" placeholder="What's your story?" rows="10" cols="40"></textarea>
 
