update demo title

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 
 <meta charset="utf-8">
-<title>Simple speech input for &lt;input&gt;s —replaces deprecated x-webkit-speech attribute</title>
+<title>Simple speech input for inputs and textareas</title>
 <link rel="stylesheet" href="speech-input.css">
 <style>
 h3 {
